name:                blog
version:             0.0.1
synopsis:            Hakyll project template from stack
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Jordi Aranda
maintainer:          jordi.aranda+dev@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable blog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.7.*,
                       blaze-html == 0.8.*,
                       MissingH == 1.3.*,
                       containers == 0.5.6.2,
                       bytestring == 0.10.6.0,
                       filepath == 1.4.0.0,
                       unix == 2.7.1.0,
                       pandoc

